linked all footer hyper links and added instructions on how to submit their cat for cat of the week. Also tweaked some layout issues that may occur in different resolutions.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav {
 }
 
 nav .menu {
-  max-width: 1100px;
+  max-width: 925px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -84,7 +84,7 @@ nav .menu {
   object-fit: cover;
 }
 .hero-image {
-  width: 1000px;
+  width: 900px;
   flex: 0 0 35%; 
   display: flex;
   align-items: center; 
